# drone-stm32-map

./: CHANGELOG.md  Cargo.toml  Justfile  README.md  build.rs  flake.nix
.cargo/: config
periph-adc/: Cargo.toml
periph-adc/src/: com.rs  lib.rs
periph-dma/: Cargo.toml
periph-dma/src/: ch.rs  lib.rs  mux.rs
periph-dma/src/mux/: ch.rs  mod.rs  rg.rs
periph-exti/: Cargo.toml
periph-exti/src/: lib.rs
periph-gpio/: Cargo.toml
periph-gpio/src/: head.rs  lib.rs  pin.rs
periph-i2c/: Cargo.toml
periph-i2c/src/: lib.rs
periph-rtc/: Cargo.toml
periph-rtc/src/: lib.rs
periph-spi/: Cargo.toml
periph-spi/src/: lib.rs
periph-tim/: Cargo.toml
periph-tim/src/: advanced.rs  basic.rs  general.rs  lib.rs  low_power.rs
periph-uart/: Cargo.toml
periph-uart/src/: lib.rs
piece-1/: Cargo.toml  build.rs
piece-10/: Cargo.toml  build.rs
piece-11/: Cargo.toml  build.rs  lib.rs
piece-12/: Cargo.toml  build.rs  lib.rs
piece-2/: Cargo.toml  build.rs  lib.rs
piece-3/: Cargo.toml  build.rs
piece-4/: Cargo.toml  build.rs
piece-5/: Cargo.toml  build.rs
piece-6/: Cargo.toml  build.rs  lib.rs
piece-7/: Cargo.toml  build.rs
piece-8/: Cargo.toml  build.rs
piece-9/: Cargo.toml  build.rs  lib.rs
pieces/: Cargo.toml  build.rs  lib.rs
res-gpio/: Cargo.toml
res-gpio/src/: head.rs  lib.rs  pin.rs  pinless.rs
scripts/: _env.sh  clippy.sh  doc.sh
src/: lib.rs  reg.rs  thr.rs
src/periph/: mod.rs
src/periph/adc/: Cargo.toml  com.rs  f3.rs  f4.rs  l4_plus.rs  lib.rs
src/periph/adc/com/: f4.rs  l4_plus.rs  mod.rs
src/periph/adc/dual/: f3.rs  mod.rs
src/periph/dma/: Cargo.toml  ch.rs  f1.rs  f3.rs  f4.rs  l4.rs  l4_plus.rs  lib.rs
src/periph/dma/ch/: f1.rs  f3.rs  f4.rs  l4.rs  l4_plus.rs  mod.rs
src/periph/dma/mux/: ch.rs  mod.rs  rg.rs
src/periph/exti/: Cargo.toml  f3.rs  f4.rs  l4_all.rs  lib.rs
src/periph/flash/: Cargo.toml  f4.rs  lib.rs
src/periph/gpio/: Cargo.toml  f1.rs  f3.rs  f4.rs  head.rs  l4_all.rs  lib.rs  pin.rs
src/periph/gpio/head/: f1.rs  f3.rs  f4.rs  l4_all.rs  mod.rs
src/periph/gpio/pin/: f1.rs  f3.rs  f4.rs  l4_all.rs  mod.rs
src/periph/i2c/: Cargo.toml  f3.rs  f4.rs  fmp.rs  l4_all.rs  lib.rs
src/periph/i2c/f4/: fmp.rs  mod.rs
src/periph/i2c/fmp/: f4.rs  l4_all.rs  mod.rs
src/periph/otgfs/: Cargo.toml  lib.rs
src/periph/otgfs/device/: f4.rs
src/periph/otgfs/global/: f4.rs  mod.rs
src/periph/otgfs/host/: f4.rs  mod.rs
src/periph/otgfs/pwrclk/: f4.rs  mod.rs
src/periph/rtc/: Cargo.toml  f4.rs  l4_all.rs  lib.rs
src/periph/spi/: Cargo.toml  f1.rs  f4.rs  l4_all.rs  lib.rs
src/periph/tim/: Cargo.toml  advanced.rs  basic.rs  general.rs  lib.rs  low_power.rs
src/periph/tim/advanced/: f3.rs  f4.rs  l4_all.rs  mod.rs
src/periph/tim/basic/: f1.rs  f3.rs  f4.rs  l4_all.rs  mod.rs
src/periph/tim/general/: f3.rs  f4.rs  l4_all.rs  mod.rs
src/periph/tim/low_power/: l4_all.rs  mod.rs
src/periph/uart/: Cargo.toml  f4.rs  l4.rs  l4_plus.rs  lib.rs
src/pieces/: Cargo.toml  build.rs  lib.rs
src/pieces/1/: Cargo.toml  build.rs
src/pieces/10/: Cargo.toml  build.rs
src/pieces/11/: Cargo.toml  build.rs
src/pieces/12/: Cargo.toml  build.rs
src/pieces/2/: Cargo.toml  build.rs
src/pieces/3/: Cargo.toml  build.rs
src/pieces/4/: Cargo.toml  build.rs
src/pieces/5/: Cargo.toml  build.rs  lib.rs
src/pieces/6/: Cargo.toml  build.rs  lib.rs
src/pieces/7/: Cargo.toml  build.rs  lib.rs
src/pieces/8/: Cargo.toml  build.rs
src/pieces/9/: Cargo.toml  build.rs
svd/: Cargo.toml  files
svd/src/: adc.rs  device.rs  dma.rs  dmamux.rs  exti.rs  gpio.rs  i2c.rs  lib.rs  pwr.rs  rcc.rs  rtc.rs  spi.rs  tim.rs  uart.rs
svd_files/: STM32F303.svd  STM32F401.svd  STM32F405.svd  STM32F407.svd  STM32F411.svd  STM32F413.svd  STM32F427.svd  STM32F446.svd  STM32F469.svd
svd_files/patch/: add_dmamux.xml  add_gpio_ascr.xml
tests/: periph_macros.rs
