[workspace]
members = [
    "svd",
    "src/pieces",
    "src/pieces/1",
    "src/pieces/2",
    "src/pieces/3",
    "src/pieces/4",
    "src/pieces/5",
    "src/pieces/6",
    "src/pieces/7",
    "src/pieces/8",
    "src/pieces/9",
    "src/pieces/10",
    "src/pieces/11",
    "src/pieces/12",
    "src/periph/adc",
    "src/periph/dma",
    "src/periph/exti",
    "src/periph/gpio",
    "src/periph/i2c",
    "src/periph/rtc",
    "src/periph/spi",
    "src/periph/tim",
    "src/periph/uart",
]

[package]
name = "drone-stm32-map"
version = "0.10.1"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
exclude = ["/svd_files"]
repository = "https://github.com/drone-os/drone-stm32-map"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-stm32-map/0.10"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
    "stm32",
    "cortex",
    "arm",
    "rtos",
    "bare-metal",
]
categories = [
    "embedded",
    "asynchronous",
    "concurrency",
    "no-std",
    "hardware-support",
]
description = """
STM32 peripheral mappings for Drone, an Embedded Operating System.
"""

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
stm32f100 = [
    "drone-cortex-m/cortex_m3_r1p1",
    "drone-stm32-map-pieces/stm32f100",
    "drone-stm32-map-periph-dma/stm32f100",
    "drone-stm32-map-periph-gpio/stm32f100",
    "drone-stm32-map-periph-spi/stm32f100",
    "drone-stm32-map-periph-tim/stm32f100",
]
stm32f101 = [
    "drone-cortex-m/cortex_m3_r1p1",
    "drone-stm32-map-pieces/stm32f101",
    "drone-stm32-map-periph-dma/stm32f101",
    "drone-stm32-map-periph-gpio/stm32f101",
    "drone-stm32-map-periph-spi/stm32f101",
    "drone-stm32-map-periph-tim/stm32f101",
]
stm32f102 = [
    "drone-cortex-m/cortex_m3_r1p1",
    "drone-stm32-map-pieces/stm32f102",
    "drone-stm32-map-periph-dma/stm32f102",
    "drone-stm32-map-periph-gpio/stm32f102",
    "drone-stm32-map-periph-spi/stm32f102",
    "drone-stm32-map-periph-tim/stm32f102",
]
stm32f103 = [
    "drone-cortex-m/cortex_m3_r1p1",
    "drone-stm32-map-pieces/stm32f103",
    "drone-stm32-map-periph-dma/stm32f103",
    "drone-stm32-map-periph-gpio/stm32f103",
    "drone-stm32-map-periph-spi/stm32f103",
    "drone-stm32-map-periph-tim/stm32f103",
]
stm32f107 = [
    "drone-cortex-m/cortex_m3_r1p1",
    "drone-stm32-map-pieces/stm32f107",
    "drone-stm32-map-periph-dma/stm32f107",
    "drone-stm32-map-periph-gpio/stm32f107",
    "drone-stm32-map-periph-spi/stm32f107",
    "drone-stm32-map-periph-tim/stm32f107",
]
stm32l4x1 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces/stm32l4x1",
    "drone-stm32-map-periph-dma/stm32l4x1",
    "drone-stm32-map-periph-exti/stm32l4x1",
    "drone-stm32-map-periph-gpio/stm32l4x1",
    "drone-stm32-map-periph-i2c/stm32l4x1",
    "drone-stm32-map-periph-rtc/stm32l4x1",
    "drone-stm32-map-periph-spi/stm32l4x1",
    "drone-stm32-map-periph-tim/stm32l4x1",
    "drone-stm32-map-periph-uart/stm32l4x1",
]
stm32l4x2 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces/stm32l4x2",
    "drone-stm32-map-periph-dma/stm32l4x2",
    "drone-stm32-map-periph-exti/stm32l4x2",
    "drone-stm32-map-periph-gpio/stm32l4x2",
    "drone-stm32-map-periph-i2c/stm32l4x2",
    "drone-stm32-map-periph-rtc/stm32l4x2",
    "drone-stm32-map-periph-spi/stm32l4x2",
    "drone-stm32-map-periph-tim/stm32l4x2",
    "drone-stm32-map-periph-uart/stm32l4x2",
]
stm32l4x3 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces/stm32l4x3",
    "drone-stm32-map-periph-dma/stm32l4x3",
    "drone-stm32-map-periph-exti/stm32l4x3",
    "drone-stm32-map-periph-gpio/stm32l4x3",
    "drone-stm32-map-periph-i2c/stm32l4x3",
    "drone-stm32-map-periph-rtc/stm32l4x3",
    "drone-stm32-map-periph-spi/stm32l4x3",
    "drone-stm32-map-periph-tim/stm32l4x3",
    "drone-stm32-map-periph-uart/stm32l4x3",
]
stm32l4x5 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces/stm32l4x5",
    "drone-stm32-map-periph-dma/stm32l4x5",
    "drone-stm32-map-periph-exti/stm32l4x5",
    "drone-stm32-map-periph-gpio/stm32l4x5",
    "drone-stm32-map-periph-i2c/stm32l4x5",
    "drone-stm32-map-periph-rtc/stm32l4x5",
    "drone-stm32-map-periph-spi/stm32l4x5",
    "drone-stm32-map-periph-tim/stm32l4x5",
    "drone-stm32-map-periph-uart/stm32l4x5",
]
stm32l4x6 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces/stm32l4x6",
    "drone-stm32-map-periph-dma/stm32l4x6",
    "drone-stm32-map-periph-exti/stm32l4x6",
    "drone-stm32-map-periph-gpio/stm32l4x6",
    "drone-stm32-map-periph-i2c/stm32l4x6",
    "drone-stm32-map-periph-rtc/stm32l4x6",
    "drone-stm32-map-periph-spi/stm32l4x6",
    "drone-stm32-map-periph-tim/stm32l4x6",
    "drone-stm32-map-periph-uart/stm32l4x6",
]
stm32l4r5 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces/stm32l4r5",
    "drone-stm32-map-periph-adc/stm32l4r5",
    "drone-stm32-map-periph-dma/stm32l4r5",
    "drone-stm32-map-periph-exti/stm32l4r5",
    "drone-stm32-map-periph-gpio/stm32l4r5",
    "drone-stm32-map-periph-i2c/stm32l4r5",
    "drone-stm32-map-periph-rtc/stm32l4r5",
    "drone-stm32-map-periph-spi/stm32l4r5",
    "drone-stm32-map-periph-tim/stm32l4r5",
    "drone-stm32-map-periph-uart/stm32l4r5",
]
stm32l4r7 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces/stm32l4r7",
    "drone-stm32-map-periph-adc/stm32l4r7",
    "drone-stm32-map-periph-dma/stm32l4r7",
    "drone-stm32-map-periph-exti/stm32l4r7",
    "drone-stm32-map-periph-gpio/stm32l4r7",
    "drone-stm32-map-periph-i2c/stm32l4r7",
    "drone-stm32-map-periph-rtc/stm32l4r7",
    "drone-stm32-map-periph-spi/stm32l4r7",
    "drone-stm32-map-periph-tim/stm32l4r7",
    "drone-stm32-map-periph-uart/stm32l4r7",
]
stm32l4r9 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces/stm32l4r9",
    "drone-stm32-map-periph-adc/stm32l4r9",
    "drone-stm32-map-periph-dma/stm32l4r9",
    "drone-stm32-map-periph-exti/stm32l4r9",
    "drone-stm32-map-periph-gpio/stm32l4r9",
    "drone-stm32-map-periph-i2c/stm32l4r9",
    "drone-stm32-map-periph-rtc/stm32l4r9",
    "drone-stm32-map-periph-spi/stm32l4r9",
    "drone-stm32-map-periph-tim/stm32l4r9",
    "drone-stm32-map-periph-uart/stm32l4r9",
]
stm32l4s5 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces/stm32l4s5",
    "drone-stm32-map-periph-adc/stm32l4s5",
    "drone-stm32-map-periph-dma/stm32l4s5",
    "drone-stm32-map-periph-exti/stm32l4s5",
    "drone-stm32-map-periph-gpio/stm32l4s5",
    "drone-stm32-map-periph-i2c/stm32l4s5",
    "drone-stm32-map-periph-rtc/stm32l4s5",
    "drone-stm32-map-periph-spi/stm32l4s5",
    "drone-stm32-map-periph-tim/stm32l4s5",
    "drone-stm32-map-periph-uart/stm32l4s5",
]
stm32l4s7 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces/stm32l4s7",
    "drone-stm32-map-periph-adc/stm32l4s7",
    "drone-stm32-map-periph-dma/stm32l4s7",
    "drone-stm32-map-periph-exti/stm32l4s7",
    "drone-stm32-map-periph-gpio/stm32l4s7",
    "drone-stm32-map-periph-i2c/stm32l4s7",
    "drone-stm32-map-periph-rtc/stm32l4s7",
    "drone-stm32-map-periph-spi/stm32l4s7",
    "drone-stm32-map-periph-tim/stm32l4s7",
    "drone-stm32-map-periph-uart/stm32l4s7",
]
stm32l4s9 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces/stm32l4s9",
    "drone-stm32-map-periph-adc/stm32l4s9",
    "drone-stm32-map-periph-dma/stm32l4s9",
    "drone-stm32-map-periph-exti/stm32l4s9",
    "drone-stm32-map-periph-gpio/stm32l4s9",
    "drone-stm32-map-periph-i2c/stm32l4s9",
    "drone-stm32-map-periph-rtc/stm32l4s9",
    "drone-stm32-map-periph-spi/stm32l4s9",
    "drone-stm32-map-periph-tim/stm32l4s9",
    "drone-stm32-map-periph-uart/stm32l4s9",
]

[dependencies.drone-cortex-m]
version = "0.10.0"
path = "../drone-cortex-m"

[dependencies.drone-stm32-map-pieces]
version = "=0.10.1"
path = "src/pieces"

[dependencies.drone-stm32-map-periph-adc]
version = "=0.10.1"
path = "src/periph/adc"
optional = true

[dependencies.drone-stm32-map-periph-dma]
version = "=0.10.1"
path = "src/periph/dma"
optional = true

[dependencies.drone-stm32-map-periph-exti]
version = "=0.10.1"
path = "src/periph/exti"
optional = true

[dependencies.drone-stm32-map-periph-gpio]
version = "=0.10.1"
path = "src/periph/gpio"
optional = true

[dependencies.drone-stm32-map-periph-i2c]
version = "=0.10.1"
path = "src/periph/i2c"
optional = true

[dependencies.drone-stm32-map-periph-rtc]
version = "=0.10.1"
path = "src/periph/rtc"
optional = true

[dependencies.drone-stm32-map-periph-spi]
version = "=0.10.1"
path = "src/periph/spi"
optional = true

[dependencies.drone-stm32-map-periph-tim]
version = "=0.10.1"
path = "src/periph/tim"
optional = true

[dependencies.drone-stm32-map-periph-uart]
version = "=0.10.1"
path = "src/periph/uart"
optional = true
