cargo-features = ["resolver"]

[workspace]
members = [
    "svd",
    "src/pieces",
    "src/pieces/1",
    "src/pieces/2",
    "src/pieces/3",
    "src/pieces/4",
    "src/pieces/5",
    "src/pieces/6",
    "src/pieces/7",
    "src/pieces/8",
    "src/pieces/9",
    "src/pieces/10",
    "src/pieces/11",
    "src/pieces/12",
    "src/periph/adc",
    "src/periph/dma",
    "src/periph/exti",
    "src/periph/gpio",
    "src/periph/i2c",
    "src/periph/otgfs",
    "src/periph/rtc",
    "src/periph/spi",
    "src/periph/tim",
    "src/periph/uart",
]

[package]
name = "drone-stm32-map"
version = "0.14.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
resolver = "2"
exclude = ["/svd_files"]
repository = "https://github.com/drone-os/drone-stm32-map"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-stm32-map/0.14/drone_stm32_map/"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
    "stm32",
    "cortex",
    "arm",
    "rtos",
    "bare-metal",
]
categories = [
    "embedded",
    "asynchronous",
    "concurrency",
    "no-std",
    "hardware-support",
]
description = """
STM32 peripheral mappings for Drone, an Embedded Operating System.
"""

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
std = ["drone-core/std", "drone-cortexm/std"]
adc = ["drone-stm32-map-periph-adc"]
dma = ["drone-stm32-map-periph-dma"]
exti = ["drone-stm32-map-periph-exti"]
gpio = ["drone-stm32-map-periph-gpio"]
i2c = ["drone-stm32-map-periph-i2c"]
otgfs = ["drone-stm32-map-periph-otgfs"]
rtc = ["drone-stm32-map-periph-rtc"]
spi = ["drone-stm32-map-periph-spi"]
tim = ["drone-stm32-map-periph-tim"]
uart = ["drone-stm32-map-periph-uart"]

[dependencies.drone-core]
version = "0.14.0"
path = "../drone-core"

[dependencies.drone-cortexm]
version = "0.14.0"
path = "../drone-cortexm"

[dependencies.drone-stm32-map-pieces]
version = "=0.14.0"
path = "src/pieces"

[dependencies.drone-stm32-map-periph-adc]
version = "=0.14.0"
path = "src/periph/adc"
optional = true

[dependencies.drone-stm32-map-periph-dma]
version = "=0.14.0"
path = "src/periph/dma"
optional = true

[dependencies.drone-stm32-map-periph-exti]
version = "=0.14.0"
path = "src/periph/exti"
optional = true

[dependencies.drone-stm32-map-periph-gpio]
version = "=0.14.0"
path = "src/periph/gpio"
optional = true

[dependencies.drone-stm32-map-periph-i2c]
version = "=0.14.0"
path = "src/periph/i2c"
optional = true

[dependencies.drone-stm32-map-periph-otgfs]
version = "=0.14.0"
path = "src/periph/otgfs"
optional = true

[dependencies.drone-stm32-map-periph-rtc]
version = "=0.14.0"
path = "src/periph/rtc"
optional = true

[dependencies.drone-stm32-map-periph-spi]
version = "=0.14.0"
path = "src/periph/spi"
optional = true

[dependencies.drone-stm32-map-periph-tim]
version = "=0.14.0"
path = "src/periph/tim"
optional = true

[dependencies.drone-stm32-map-periph-uart]
version = "=0.14.0"
path = "src/periph/uart"
optional = true
