[package]
name = "drone-stm32-map-svd"
version = "0.10.1"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
repository = "https://github.com/drone-os/drone-stm32-map"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-stm32-map/0.10/drone_stm32_map_svd/"
license = "MIT OR Apache-2.0"
description = """
STM32 SVD to bindings for Drone, an Embedded Operating System.
"""

[dependencies.drone-svd]
version = "0.10.0"
path = "../../drone-svd"

[dependencies]
failure = "0.1"
