[package]
name = "drone-stm32-map-svd"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
documentation = "https://api.drone-os.com/drone-stm32-map/0.15/drone_stm32_map_svd/"
description = """
STM32 SVD to bindings for Drone, an Embedded Operating System.
"""

[dependencies]
drone-config.workspace = true
drone-svd.workspace = true
